--- a/visualize/pyproject.toml
+++ b/visualize/pyproject.toml
@@ -12,6 +12,9 @@ japanmap = "^0.1.0"
 matplotlib = "^3.5.1"
 jupyter = "^1.0.0"
 ipykernel = "^6.11.0"
+nbconvert = "^6.4.5"
+nbqa = "^1.3.1"
+black = "^22.3.0"
 
 [tool.poetry.dev-dependencies]
 
