--- a/stylesheet/pyproject.toml
+++ b/stylesheet/pyproject.toml
@@ -16,6 +16,7 @@ jupyter = "^1.0.0"
 japanize-matplotlib = "^1.1.3"
 black = "^22.3.0"
 nbqa = "^1.3.1"
+nbconvert = "^6.4.5"
 
 [tool.poetry.dev-dependencies]
 
