--- a/timeseries/pyproject.toml
+++ b/timeseries/pyproject.toml
@@ -19,6 +19,7 @@ openml = "^0.12.2"
 scikit-learn = "^1.0.2"
 japanize-matplotlib = "^1.1.3"
 nbqa = "^1.3.1"
+xgboost = "^1.6.0"
 
 [tool.poetry.dev-dependencies]
 
