--- a/timeseries/pyproject.toml
+++ b/timeseries/pyproject.toml
@@ -20,6 +20,7 @@ scikit-learn = "^1.0.2"
 japanize-matplotlib = "^1.1.3"
 nbqa = "^1.3.1"
 xgboost = "^1.6.0"
+scipy = "^1.8.0"
 
 [tool.poetry.dev-dependencies]
 
