--- a/timeseries/pyproject.toml
+++ b/timeseries/pyproject.toml
@@ -31,6 +31,7 @@ intrinio-sdk = "^5.21.0"
 yfinance = "^0.1.74"
 QuantStats = "^0.0.59"
 mplfinance = "^0.12.9-beta.1"
+wget = "^3.2"
 
 [tool.poetry.dev-dependencies]
 
