--- a/visualize/pyproject.toml
+++ b/visualize/pyproject.toml
@@ -5,7 +5,7 @@ description = ""
 authors = ["Your Name <you@example.com>"]
 
 [tool.poetry.dependencies]
-python = "^3.10"
+python = "^3.9"
 numpy = "^1.22.3"
 pandas = "^1.4.2"
 japanmap = "^0.1.0"
@@ -15,6 +15,8 @@ ipykernel = "^6.11.0"
 nbconvert = "^6.4.5"
 nbqa = "^1.3.1"
 black = "^22.3.0"
+seaborn = "^0.12.1"
+ridgeplot = "^0.1.16"
 
 [tool.poetry.dev-dependencies]
 
