--- a/basic/pyproject.toml
+++ b/basic/pyproject.toml
@@ -11,7 +11,7 @@ japanize-matplotlib = "^1.1.3"
 jupyter = "^1.0.0"
 matplotlib = "^3.4.3"
 numpy = "^1.21.2"
-python = "3.8.5"
+python = "^3.8.5"
 scikit-learn = "^1.0"
 
 [tool.poetry.dev-dependencies]
